# CFTK

./: .gitignore  LICENSE  README.md  README_MODEL_POWER.md  cftk_init.json  process.rst  pyproject.toml  report_template.html  twist_init.json  util.py
.devcontainer/: devcontainer.json
.github/workflows/: static.yml
apps/: model_power_app_helpers.py  model_power_app_page.py  model_power_app_runtime.py  model_power_calculator.py  requirements.txt
data/: manifest.json
docs/: conf.py  development.rst  getting_started.rst  index.rst  installation.rst  requirements.txt  run_make_html.sh
docs/.ipynb_checkpoints/: getting_started-checkpoint.rst  index-checkpoint.rst
docs/_static/: cftk_init.json  custom.css
docs/reference/: cli.rst  config_schema.rst  index.rst  modules.rst  outputs.rst  reference_data.rst
docs/user_guide/: configuration.rst  fragmentomics.rst  index.rst  model_power.rst  model_power_calculator.rst  modeling_reporting.rst  processing.rst  quality_control.rst
src/: WPS_region.py  cftk.py  differential_analysis.py  init.py  mesa_cv_plot.py  modality_performance.py  power_analysis.py  process.py  region_average.py  test.ipynb  twist.py  twist_init.json  util.py
src/.ipynb_checkpoints/: cftk-checkpoint.py  mesa_loocv-checkpoint.py  process-checkpoint.py  twist-checkpoint.py  util-checkpoint.py
src/analysis/: cleavage.py  delfi.py  depth_model.py  dmr.py  (+18 more)
tests/: README.md  test_model_power_app_helpers.py  test_model_power_discovery.py  test_model_power_loading.py  test_model_power_operating_characteristics.py  test_model_power_reference.py
(+31 files in other folders)
